# supportiv_exercise

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: insights.ipynb
reports/: recommendation_report.html  user_activity_report.html
