[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "supportiv_take_home_challenge_submission"
version = "0.0.1"
description = "An exercise to analyze user activity, recommendation, and moderator data for Supportiv."
authors = [
  { name = "Yunjia (Alven) Li" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["supportiv_take_home_challenge_submission"]
force_sort_within_sections = true
